<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/tweetMarginExtraSmall"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="@dimen/largeMargin"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/tweetMarginSmall"
        android:layout_marginLeft="@dimen/tweetMarginExtraSmall"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:text="@string/name"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tvUserName"
        android:text="@string/body"
        android:autoLink="all"
        android:linksClickable="true"
        android:layout_below="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvRelativeTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:text="@string/time" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screenName"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tvUserName"
        android:layout_marginStart="@dimen/tweetMarginSmall" />
</RelativeLayout>